Ignoring gemfile.lock as the native machine creates one from gemfile itself after running Using rake (10.0.4) Using i18n (0.6.1) Using multi_json (1.7.2) Using activesupport (3.2.13) Using builder (3.0.4) Using activemodel (3.2.13) Using erubis (2.7.0) Using journey (1.0.4) Using rack (1.4.5) Using rack-cache (1.2) Using rack-test (0.6.2) Using hike (1.2.2) Using tilt (1.3.7) Using sprockets (2.2.2) Using actionpack (3.2.13) Using mime-types (1.23) Using polyglot (0.3.3) Using treetop (1.4.12) Using mail (2.5.3) Using actionmailer (3.2.13) Using arel (3.0.2) Using tzinfo (0.3.37) Using activerecord (3.2.13) Using activeresource (3.2.13) Using coffee-script-source (1.6.2) Using execjs (1.4.0) Using coffee-script (2.2.0) Using rack-ssl (1.3.3) Using json (1.7.7) Using rdoc (3.12.2) Using thor (0.18.1) Using railties (3.2.13) Using coffee-rails (3.2.2) Using jquery-rails (2.2.1) Using bundler (1.3.4) Using rails (3.2.13) Using sass (3.2.7) Using sass-rails (3.2.6) Using sqlite3 (1.3.7) Using uglifier (2.0.1) Your bundle is complete! Use `bundle show [gemname]` to see where a bundled gem is installed. or Using rake (10.0.4) Using i18n (0.6.1) Using multi_json (1.7.2) Using activesupport (3.2.13) Using builder (3.0.4) Using activemodel (3.2.13) Using erubis (2.7.0) Using journey (1.0.4) Using rack (1.4.5) Using rack-cache (1.2) Using rack-test (0.6.2) Using hike (1.2.2) Using tilt (1.3.7) Using sprockets (2.2.2) Using actionpack (3.2.13) Using mime-types (1.23) Using polyglot (0.3.3) Using treetop (1.4.12) Using mail (2.5.3) Using actionmailer (3.2.13) Using arel (3.0.2) Using tzinfo (0.3.37) Using activerecord (3.2.13) Using activeresource (3.2.13) Using coffee-script-source (1.6.2) Using execjs (1.4.0) Using coffee-script (2.2.0) Using rack-ssl (1.3.3) Using json (1.7.7) Using rdoc (3.12.2) Using thor (0.18.1) Using railties (3.2.13) Using coffee-rails (3.2.2) Using jquery-rails (2.2.1) Using bundler (1.3.4) Using rails (3.2.13) Using sass (3.2.7) Using sass-rails (3.2

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 *.csv
 #ignore .rvmrc too
 .rvmrc
+#gemfile.lock to be ignored as gemfile creates native machine specific gemfile.lock when `bundle install` is run.
+Gemfile.lock
